bugfix: search typeahead overlapped by following content

--- a/src/scss/module-searchbar.scss
+++ b/src/scss/module-searchbar.scss
@@ -112,6 +112,7 @@
   left: 1px;
   right: -69px;
   background: white;
+  z-index: 1010;
 
   line-height: 2em;
   text-align: left;
